--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Security Headers (Fallback for browsers that don't support _headers file) -->
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self' 'unsafe-inline' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self'">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
+    <!-- SEO & Social Meta Tags -->
     <meta name="description"
         content="𝑭𝒂𝒓𝒓𝒖 - Full Stack Developer & UI/UX Designer. Specializing in modern web applications, responsive design, and user-centric digital experiences.">
     <meta name="keywords" content="full stack developer, web developer, UI/UX designer, React, Node.js, portfolio">
@@ -11,6 +21,7 @@
     <meta property="og:title" content="𝑭𝒂𝒓𝒓𝒖 - Full Stack Developer">
     <meta property="og:description" content="Creating beautiful, functional web experiences">
     <meta property="og:type" content="website">
+
     <title>𝑭𝒂𝒓𝒓𝒖 - Developer & Designer</title>
     <link rel="stylesheet" href="style.css?v=3.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
